# ParticlePhysics

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bba6657  README.md  Util.h  main.cpp  particle.cpp  particle.h  particlesystem.cpp  particlesystem.h
data/: superquadratic.ply
